--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
-<!DOCTYPE html>
 <html>
-<head>
-
-<title>C81</title>
-<link rel="stylesheet" type="text/css" href="C81style.css">
-</head>
-<body class="body_backgorund">
-
-<center>
-	<h1>My First Canvas</h1>
-	<CANVAS CLASS="MY CANVAS" widht="800" height="600"></CANVAS>
-	<br>
-</center>
-
-
-<script src="C81main.js"></script>
-</body>
+  <head>
+    <title>ADV - C81: OLYMPIC SYMBOL</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="main.js"></script>
+  </head>
+  <body class="body_background">
+    
+    <center>
+      <h1>Olympic Symbol</h1>
+      <canvas id="myCanvas" width="800" height="600">
+      </canvas>
+    </center>
+    
+  </body>
 </html>
